--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-project",
+  "name": "dlw-support-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "homepage": "https://dapperlabs.github.io/dlw-support-app/",
   "scripts": {
